force-app/main/default/objects/CNA_Program_Schdeule__c/CNA_Program_Schdeule__c.object-meta.xml
<CustomObject>
    <label>CNA Program Schdeule</label>
    <nameField>
        <displayFormat>CNA Schedule-{0000}</displayFormat>
        <label>CNA Schedule Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CNA Program Schdeules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>