force-app/main/default/objects/CNA_Program_Schdeule__c/fields/CNA_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>CNA_Program_Type__c</fullName>
    <label>CNA Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>