force-app/main/default/objects/CNA_Program_Schdeule__c/fields/EdFund_Vendor__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EdFund Vendor</label>
    <referenceTo>EdFund_Vendor__c</referenceTo>
    <relationshipLabel>CNA Program Schdeules</relationshipLabel>
    <relationshipName>CNA_Program_Schdeules</relationshipName>
    <type>Lookup</type>
</CustomField>