force-app/main/default/objects/CNA_Program_Schdeule__c/fields/Schedule_days__c.field-meta.xml
<CustomField>
    <fullName>Schedule_days__c</fullName>
    <label>Schedule days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>CNA_Program_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>